--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,11 @@
 .Header {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+  background: #9bf;
+  font-size: 1.5rem;
 }
-/*# sourceMappingURL=a.css.map */
+/*# sourceMappingURL=Header.css.map */
