--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,8 @@
 .Header {
-  display: inline-block;
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+  background: #9bf;
+  font-size: 1.5rem;
 }
