--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "./styles/normalize.css";
 
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
